--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "@mui/lab": "^6.0.0-beta.10",
     "@mui/material": "^6.1.1",
     "@next/third-parties": "^14.2.13",
+    "@types/crypto-js": "^4.2.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.2",
     "netflex_clone": "file:",
     "next": "14.2.13",
     "react": "^18",
